kubernetes/apps/cloud/nextcloud/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: cloud
spec:
  headers:
    customResponseHeaders:
      X-Powered-By: ""
      Server: ""
      Strict-Transport-Security: "max-age=15552000; includeSubDomains"
    contentTypeNosniff: true
    browserXssFilter: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-host-meta
  namespace: cloud
spec:
  replacePathRegex:
    regex: ^/.well-known/host-meta(.*)
    replacement: /public.php?service=host-meta$1
