kubernetes/apps/cloud/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: cloud
  annotations:
    traefik.io/router.middlewares: "cloud-nextcloud-headers@kubernetescrd,cloud-nextcloud-host-meta@kubernetescrd"
    external-dns.alpha.kubernetes.io/controller: "ignore"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - cloud.titusio.net
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/carddav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 301
    - matches:
        - path:
            type: Exact
            value: /.well-known/caldav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 301
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/webfinger
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /index.php/.well-known/webfinger
      backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/nodeinfo
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /index.php/.well-known/nodeinfo
      backendRefs:
        - name: nextcloud
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: collabora
  namespace: cloud
  annotations:
    external-dns.alpha.kubernetes.io/controller: "ignore"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - office.titusio.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-collabora-online
          port: 9980
